# Cupl-Cpp

./: .gitignore  CMakeLists.txt  Readme.md
include/cupl/registries/: registration.hpp  registry_map.hpp  registry_set.hpp
include/cupl/registries/detail/: aggregate_registry.hpp  registry_impl.hpp
include/cupl/slicing/: slice.hpp  sliced_span.hpp
tests/: CMakeLists.txt
tests/registries/: test.cpp
tests/slicing/: test.cpp
